[package]
name = "compile-time-lua-bind-hash-impl"
version = "0.1.0"
authors = ["jugeeya <jugeeya@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.11"
syn = "^1.0"
quote = "^1.0"
lua_bind_hash = "1.0.1"